💄 Fix dark mode color

--- a/src/components/ImagePreview.css
+++ b/src/components/ImagePreview.css
@@ -149,6 +149,7 @@
 @media (prefers-color-scheme: dark) {
     .image-preview > .bottom-bar {
         color: white;
+        background-color: #333333;
     }
 }
 .image-preview > .bottom-bar > .title-contents-box {
@@ -192,7 +193,11 @@
     font-family: 'Pretendard-Bold';
 }
 @media (prefers-color-scheme: dark) {
-    .image-preview > .bottom-bar > * {
+    .image-preview > .bottom-bar {
+        border: .9px solid #444444;
+        background-color: #333333;
+    }
+    .image-preview > .bottom-bar > .like {
         border: .9px solid #444444;
         background-color: #333333;
     }
